Fixed left window spacing bug

--- a/views/css/components.css
+++ b/views/css/components.css
@@ -119,6 +119,10 @@
   width: 100px;
 }
 
+#leftWindow * {
+  margin: 10px;
+}
+
 #priceTitle {
   font-size: 16px;
   padding-top: 12px;
